test/cases/parsing/array_comma.c
// RUN: %check -e %s
int x[1, 2]; // CHECK: /error: expecting token '\]'/
